# dsb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  LICENSE  LICENSE-AGPL-3.0  LICENSE-APACHE-2.0  LICENSING.md  Makefile  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  TESTING.md  dsb.test.yaml.example  dsb.yaml.example  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  unified_error_code.md
.cargo/: llvm-cov.toml
.github/: CODEOWNERS  pull_request_template.md
dashboard/: README.md  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
deployment/: .env.china.example  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  dsb.yaml.china.example  dsb.yaml.example  logs.sh  start.sh  stop.sh
docker/: .env.china.example  .env.example  Dockerfile  Dockerfile.e2e-runner  Dockerfile.mcp  Dockerfile.test  Dockerfile.test-mcp  Dockerfile.test-server  Dockerfile.test-server-quick  dashboard_Dockerfile  docker-compose.test.yml  docker-compose.yml  ssh_gateway_Dockerfile
docker/base-images/python-base/: Dockerfile  README.md  pyproject.toml
docker/base-images/rust-base/: Cargo.toml  Dockerfile  README.md
dsb-agent-tester/: Cargo.toml  README.md  douban_top250_k8s.md  test-pw.js
dsb-agent-tester/dsb-agent-tester/tests/: k8s_playwright.spec.ts
dsb-agent-tester/examples/: douban_mcp_html.rs
dsb-agent-tester/src/: lib.rs  main.rs
dsb-agent-tester/src/agents/: mod.rs  monorail.rs
dsb-agent-tester/src/docker/: mod.rs
dsb-agent-tester/src/tests/: k8s_browser_tools_tests.rs  k8s_concurrent_tools_tests.rs  k8s_dashboard_auth_tests.rs  k8s_douban_tests.rs  k8s_mod.rs  k8s_static_files_tests.rs  mod.rs  monorail_tests.rs  scenario_tests.rs  test_utils.rs  web_tools_tests.rs
dsb-agent-tester/tests/: k8s_playwright.spec.ts
dsb-mcp-server/: Cargo.toml  README.md  test_protocol.rs
dsb-mcp-server/examples/: test_mcp.rs  test_reqwest.rs
dsb-mcp-server/src/: dsb_client.rs  dsb_service.rs  lib.rs  main.rs  server.rs  session.rs  settings.rs
dsb-mcp-server/src/prompts/: handlers.rs  mod.rs  templates.rs
dsb-mcp-server/src/resources/: handlers.rs  mod.rs
dsb-mcp-server/src/services/: browser.rs  mod.rs  sandbox.rs  system.rs  terminal.rs  value_retrieval.rs  web.rs
dsb-mcp-server/src/tools/: browser.rs  exec.rs  mod.rs  sandbox.rs  web.rs
dsb-mcp-server/tests/: debug_sandbox_create.rs  execution_tools_tests.rs  json_serialization_tests.rs  sandbox_tools_tests.rs
dsb-mcp-server/tests/common/: mock_dsb_api.rs  mod.rs  test_fixtures.rs
scripts/: build-and-push.sh  build-k8s-release-images.sh  mcp-k8s-cluster-verify.sh  mcp_tool_verification.py  run-agent-tester-k8s.sh
sdks/python/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
sdks/python/docs/: index.md
sdks/python/docs/api/: sandbox.md  ssh.md  terminal.md  web.md
sdks/python/docs/guides/: async_usage.md  best_practices.md  configuration.md  error_handling.md
sdks/python/examples/: async_terminal.py  async_usage.py  authenticated_usage.py  basic_usage.py  config_from_env.py  error_handling.py  file_operations.py  metrics_monitoring.py  port_forwarding.py  sandbox_wait.py  streaming.py  terminal_usage.py  web_scraping.py
sdks/python/src/dsb_sdk/: __init__.py  client.py  config.py  constants.py  error_codes.py  exceptions.py  logging.py  metrics.py
sdks/python/src/dsb_sdk/api/: __init__.py  activities.py  activities_async.py  admin.py  admin_async.py  config.py  config_async.py  health.py  health_async.py  images.py  images_async.py  sandbox.py  sandbox_async.py  ssh.py  ssh_async.py  static_files.py  static_files_async.py  terminal.py  web.py  web_async.py
sdks/python/src/dsb_sdk/transport/: __init__.py  async_transport.py  base.py  sync.py
sdks/python/src/dsb_sdk/types/: __init__.py  common.py  exec.py  sandbox.py  ssh.py  web.py
sdks/python/src/dsb_sdk/utils/: __init__.py  circuit.py  exec_error_handler.py  retry.py  streaming.py  websocket.py
sdks/python/tests/: README.md  __init__.py  conftest.py  dsb_server_manager.py  test_cleanup_verification.py
sdks/python/tests/benchmarks/: __init__.py  test_performance.py
sdks/python/tests/fixtures/: __init__.py  model_fixtures.py  test-tables.html
sdks/python/tests/integration/: __init__.py  conftest.py  test_activities_api.py  test_admin_api.py  test_api_contracts.py  test_async_client.py  test_async_sandbox_api.py  test_async_web_api.py  test_config_api.py  test_feature_profiles.py  test_file_download_api.py  test_file_upload_api.py  test_health_api.py  test_images_api.py  test_json_serialization.py  test_sandbox_api.py  test_sandbox_creation_comprehensive.py  test_sandbox_e2e.py  test_ssh_api.py  test_static_files.py  test_terminal_api.py  test_web_api.py
sdks/python/tests/unit/: __init__.py  test_config.py  test_error_scenarios.py  test_exec_error_handler.py  test_streaming.py  test_transport.py  test_websocket.py
src/: lib.rs  main.rs  session_token.rs  vnc_proxy.rs  web_terminal.rs
ssh-gateway/: COMPREHENSIVE_GUIDE.md  Cargo.toml  README.md
ssh-gateway/src/: docker.rs  k8s.rs  lib.rs  main.rs  session.rs  ssh.rs
ssh-gateway/tests/: integration_tests.rs
static-server/: Cargo.toml  README.md
static-server/src/: config.rs  lib.rs  main.rs
static-server/tests/: integration_test.rs
tests/: activities_cleanup_api_tests.rs  api_key_integration_tests.rs  api_server_e2e.rs  cli_http_integration_tests.rs  db_integration_tests.rs  e2e_api_features.rs  e2e_auth.rs  e2e_db.rs  e2e_sandbox_lifecycle.rs  http_client_mock_tests.rs  images_api_tests.rs  integration_ssh_docker.rs  integration_test.rs  static_files_api_tests.rs  terminal_docker_compose_test.rs  test_cleanup_verification.rs  test_database_setup.rs  test_ssh_authorization.rs  test_ssh_session_cleanup.rs  test_ssrf_validation.py  test_web_terminal.rs  vnc_docker_compose_test.rs  (+1 more)
(+268 files in other folders)
