[package]
name = "static-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Static file server for DSB sandbox publications"
license = "AGPL-3.0-or-later"

[lib]
name = "static_server"
path = "src/lib.rs"

[[bin]]
name = "static-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true

# DSB shared types (path dependency like ssh-gateway)
dsb = { path = "..", features = [] }
