[project]
name = "dsb-cache"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]>=0.27.0",
    "pydantic>=2.0.0",
    "sse-starlette>=2.0.0",
    "websocket-client>=1.8.0",
    "anyio>=4.0.0",
    "typing-extensions>=4.12.0",
    "tenacity>=8.5.0",
    "pybreaker>=1.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.12.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "safety>=3.0.0",
]
